product opinions relations

--- a/client/src/app/product-details/create-product-opinion/create-product-opinion.component.css
+++ b/client/src/app/product-details/create-product-opinion/create-product-opinion.component.css
@@ -23,11 +23,11 @@
     padding-left: 10px;
   }
   
-  .add-opinion-submit button {
+  /* .add-opinion-submit button {
     padding: 8px;
     background: #0077ff;
     color: white;
     border-radius: 5px;
     border: none;
     cursor: pointer;
-  }
+  } */ 
