--- a/client/src/app/product-details/create-product-opinion/create-product-opinion.component.html
+++ b/client/src/app/product-details/create-product-opinion/create-product-opinion.component.html
@@ -2,7 +2,7 @@
     <div>
         <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
     </div>
-    <form [formGroup]="opinionForm" (ngSubmit)="submitForm()">
+    <form [formGroup]="opinionForm">
         <div class="add-opinion-inp">
             <input 
                 type="text" 
