--- a/client/src/app/product-details/product-details-data/product-details-data.component.html
+++ b/client/src/app/product-details/product-details-data/product-details-data.component.html
@@ -16,10 +16,9 @@
       </button>
     </div>
     <div class="p-add-to-cart">
-      <button>
-        Add To Cart
-        <i class="fa fa-cart-plus"></i>
-      </button>
+       <app-add-to-cart-button>
+           
+       </app-add-to-cart-button>
     </div>
   </div>
 </div>
