--- a/client/src/app/layout/product-card/product-card.component.html
+++ b/client/src/app/layout/product-card/product-card.component.html
@@ -1,9 +1,9 @@
 <div class="product">
   <div class="product-card">
-    <img src="Screenshot_20240928-011835.png" alt="Producto" class="product-img">
+    <img [src]="product.pictures[0]" alt="Producto" class="product-img">
     <div class="product-info">
-      <h3 class="product-title">Le Male Elixir</h3>
-      <span class="product-price">$99.99</span>
+      <h3 class="product-title">{{ product.title }}</h3>
+      <span class="product-price">${{ product.price }}</span>
     </div>
   </div>
 </div>
