added some router links

--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -1,41 +1,57 @@
 <main>
   <div class="main-header">
-      <h1>"Click, Click... ¡It's Mine!"</h1>
-      <p>¿You Want It? You Get It.</p>
-      <p>So easy Like That, No complications, and Fast services.</p>
+    <h1>"Click, Click... ¡It's Mine!"</h1>
+    <p>¿You Want It? You Get It.</p>
+    <p>So easy Like That, No complications, and Fast services.</p>
   </div>
 
   <div class="grid-categories">
-      <div class="category smartphones">
-          
-          <div class="category-content">
-                <h2>Smartphones</h2>
-          </div>
-      </div>
-      <div class="category pc">
-          <div class="category-content">
-             <h2>PC</h2>
-          </div>
-      </div>
-      <div class="category console">
-          <div class="category-content">
-              <h2>Consoles</h2>
-          </div>
-      </div>
-      <div class="category gaming">
-          <div class="category-content">
-              <h2>Gaming</h2>
-          </div>
-      </div>
-      <div class="category tv">
-          <div class="category-content">
-              <h2>TV</h2>
-          </div>
-      </div>
-      <div class="category accessories">
-          <div class="category-content">
-              <h2>Accessories</h2>
-          </div>
-      </div>
+    <div class="category smartphones">
+      <a routerLink="/category/Smartphones">
+        <div class="category-content">
+          <h2>Smartphones</h2>
+        </div>
+      </a>
+    </div>
+    
+    <div class="category pc">
+      <a routerLink="/category/PC">
+        <div class="category-content">
+          <h2>PC</h2>
+        </div>
+      </a> 
+    </div>
+    
+    <div class="category console">
+      <a routerLink="/category/Consoles"> 
+        <div class="category-content">
+          <h2>Consoles</h2>
+        </div>
+      </a> 
+    </div>
+
+    <div class="category gaming">
+      <a routerLink="/category/Gaming">
+        <div class="category-content">
+          <h2>Gaming</h2>
+        </div>
+      </a>
+    </div>
+
+    <div class="category tv">
+      <a routerLink="/category/TV">
+        <div class="category-content">
+          <h2>TV</h2>
+        </div>
+      </a>
+    </div>
+
+    <div class="category accessories">
+      <a routerLink="/category/Accessories">
+        <div class="category-content">
+          <h2>Accessories</h2>
+        </div>
+      </a>
+    </div>
   </div>
 </main>
