--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -1,24 +1,26 @@
 <header>
   <div class="h-logo">
-    <h2>Jagarv</h2>
+    <a routerLink="/">
+      <h2>Jagarv</h2>
+    </a>
   </div>
-  
+
   <div class="h-grow">
     <div class="h-grow-links">
       <div>
-        <a routerLink="/best-sellers">Best Sellers</a> 
+        <a routerLink="/best-sellers">Best Sellers</a>
       </div>
       
       <div>
-        <a routerLink="/my-wishlist">My Wishlist</a> 
+        <a routerLink="/my-wishlist">My Wishlist</a>
       </div>
       
       <div class="h-admin-l">
-        <a routerLink="/admin">Admin</a> 
+        <a routerLink="/admin">Admin</a>
       </div>
     </div>
   </div>
-  
+
   <div class="h-user">
     <div class="h-cart">
       <i class="fa fa-shopping-cart"></i>
@@ -28,8 +30,10 @@
     </div>
     <div>
       <div class="not-logged-in">
-        <i class="fa fa-user"></i>
-      </div> 
+        <a routerLink="/account">
+          <i class="fa fa-user"></i>
+        </a>
+      </div>
     </div>
   </div>
 </header>
