--- a/client/src/app/layout/product-card/product-card.component.html
+++ b/client/src/app/layout/product-card/product-card.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="['/product', product.id]">
   <div class="product">
     <div class="product-card">
-      <img [src]="product.pictures[0]" alt="Producto" class="product-img">
+      <img [src]="product.pictures[0]" alt="Product" class="product-img">
       <div class="product-info">
         <h3 class="product-title">{{ product.title }}</h3>
         <span class="product-price">${{ product.price }}</span>
