--- a/client/src/app/search/search.component.html
+++ b/client/src/app/search/search.component.html
@@ -3,9 +3,9 @@
     <app-header></app-header>
   </div>
 
-  <div class="aside">
+  <!-- <div class="aside">
     <app-search-page-aside></app-search-page-aside>
-  </div>
+  </div> -->
 
   <main class="search-results">
     <app-product-list [products]="searchResults$ | async"></app-product-list>
