implementing product opinion read in product details page

--- a/client/src/app/product-details/product-details.component.html
+++ b/client/src/app/product-details/product-details.component.html
@@ -15,9 +15,11 @@
     <div class="main-opinions">
         <!-- Create opinion form -->
         <app-create-product-opinion></app-create-product-opinion>
-        <div class="opinion">
+        <div class="opinion" *ngFor="opinion in product.opinions">
             <!-- Product opinion -->
-            <app-product-opinion></app-product-opinion>
+            <app-product-opinion [opinion]="opinion">
+                
+            </app-product-opinion>
         </div>
     </div> 
 </main>
