--- a/client/src/app/product-details/product-opinion/product-opinion.component.html
+++ b/client/src/app/product-details/product-opinion/product-opinion.component.html
@@ -1,7 +1,7 @@
 <div class="opinion"> 
     <div class="o-user">
       <img src="/assets/images/istockphoto-579156228-1024x1024.jpg" alt="Screenshot_20240928-011835.png">
-      <p class="username">Arnold Schwarztmann</p>
+      <p class="username">{{ opinion?.user?.username || 'Someone' }}</p>
     </div>
     <div class="o-data">
       <p class="date">2024/07/13</p>
@@ -11,6 +11,6 @@
       </div>
     </div>
     <div class="o-content">
-      <p>Lorem ipsjejf skdjd ekxjd exizis eicucu wieufuc skwieur cksise fixis wkeieuf.widjdns fixjd</p>
+      <p>{{ opinion?.content || 'Not Provided' }}</p>
     </div>
   </div>
