--- a/client/src/app/product-details/product-details.component.html
+++ b/client/src/app/product-details/product-details.component.html
@@ -15,11 +15,8 @@
     <div class="main-opinions">
         <!-- Create opinion form -->
         <app-create-product-opinion></app-create-product-opinion>
-        <div class="opinion" *ngFor="opinion in product.opinions">
-            <!-- Product opinion -->
-            <app-product-opinion [opinion]="opinion">
-                
-            </app-product-opinion>
+        <div class="opinion" *ngFor="let opinion of product?.opinions">
+            <app-product-opinion [opinion]="opinion"></app-product-opinion>
         </div>
     </div> 
 </main>
