--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -1,13 +1,12 @@
 <div class="cart-product">
     <div class="cp-details">
       <div class="cp-image">
-        <img src="Screenshot_20240928-011835.png" alt="Screenshot_20240928-011835.png">
+         <img [src]="product?.pictures?.[0] ?? 'other path'">
       </div>
       
       <div class="cp-data">
-        <p class="cp-title">Samsung Galaxy S20 FE 5G</p>
-        <p class="cp-price">341 €</p>
-        <p>64 Sold</p>
+        <p class="cp-title">{{ product?.title ?? 'Not Provided' }}</p>
+        <p class="cp-price">$ {{ product?.price ?? 0}}</p>
         <div class="cp-attrubutes">
           <p>128GB</p>
           <p>Red</p>
