removing from cart products

--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -14,7 +14,9 @@
       </div>
     </div>
     <div class="cp-remove">
-      <app-remove-cart-product>
+      <app-remove-cart-product
+      [productId]="product?.id"
+      >
         <!-- component for product removal of the cart -->
       </app-remove-cart-product>
     </div>
