--- a/client/src/app/cart/cart-product/cart-product.component.html
+++ b/client/src/app/cart/cart-product/cart-product.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="cp-remove">
       <app-remove-cart-product
-      [productId]="product?.productId ?? null"
+      [productId]="product?.id ?? null"
       >
         <!-- component for product removal of the cart -->
       </app-remove-cart-product>
