--- a/client/src/app/product-details/product-details-images/product-details-images.component.html
+++ b/client/src/app/product-details/product-details-images/product-details-images.component.html
@@ -3,6 +3,11 @@
         <div (click)="decrementImage()" class="slider-action-left">
             <i class="fa fa-arrow-left"></i>
         </div>
+        <div class="add-to-wishlist">
+           <app-add-to-wishlist>
+             <!-- Add or remove To Wishlist Component -->
+           </app-add-to-wishlist>
+        </div>
         <img [src]="(product$ | async)?.pictures?.[imageIndex] || '/assets/images/istockphoto-579156228-1024x1024.jpg'">
         <div (click)="incrementImage()" class="slider-action-right">
             <i class="fa fa-arrow-right"></i>
