--- a/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.html
+++ b/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.html
@@ -1,1 +1,4 @@
-<p>add-to-wishlist works!</p>
+<button (click)="addOrRemoveToWishlist()" class="wishlist-btn">
+    <i class="fa fa-heart"></i>
+</button>
+  
