--- a/client/src/app/wishlist/wishlist.component.html
+++ b/client/src/app/wishlist/wishlist.component.html
@@ -1,6 +1,6 @@
 <main>
     <app-product-list
-    [products]="products"
+    [products]="wishlist.products"
     >
         
     </app-product-list>
