--- a/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.html
+++ b/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.html
@@ -1,4 +1,6 @@
-<button (click)="addOrRemoveToWishlist()" class="wishlist-btn">
-    <i class="fa fa-heart"></i>
+<button 
+  (click)="addOrRemoveToWishlist()" 
+  class="wishlist-btn" 
+  [ngClass]="{'on': inWishlist}">
+  <i class="fa fa-heart"></i>
 </button>
-  
