--- a/client/src/app/layout/product-list/product-list.component.css
+++ b/client/src/app/layout/product-list/product-list.component.css
@@ -4,3 +4,14 @@
     padding: 15px;
 }
 
+@media(max-width: 700px) {
+    .products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 600px) {
+    .products {
+        grid-template-columns: 1fr;
+    }
+}
