--- a/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.css
+++ b/client/src/app/layout/product-card/add-to-wishlist/add-to-wishlist.component.css
@@ -5,7 +5,7 @@
     border-radius: 50%;
     padding: 10px;
     font-size: 18px;
-    color: #ff2a68;
+    color: black;
     cursor: pointer;
     transition: all 0.3s ease;
   }
