--- a/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
+++ b/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
@@ -1,1 +1,6 @@
-<button (click)="addToCart()">Add To Cart</button>
+<button 
+  (click)="addToCart()" 
+  class="add-to-cart" 
+  [ngClass]="{'on': inCart}">
+  {{ inCart ? 'Remove From Cart' : 'Add To Cart' }}
+</button>
