zu viele fehle aber kein geld hier.

--- a/client/src/app/product-details/product-details-data/product-details-data.component.html
+++ b/client/src/app/product-details/product-details-data/product-details-data.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="p-add-to-cart">
        <app-add-to-cart-button
-       [inCart]="(product$ | async)?.inCart"
+       [inCart]="(product$ | async)?.inCart ?? false"
        >
            
        </app-add-to-cart-button>
