--- a/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
+++ b/client/src/app/product-details/add-to-cart-button/add-to-cart-button.component.html
@@ -1,6 +1,6 @@
 <button 
   (click)="addToCart()" 
-  class="add-to-cart" 
+  class="wishlist-btn" 
   [ngClass]="{'on': inCart}">
   {{ inCart ? 'Remove From Cart' : 'Add To Cart' }}
 </button>
