--- a/client/src/app/layout/search-page-aside/search-page-aside.component.html
+++ b/client/src/app/layout/search-page-aside/search-page-aside.component.html
@@ -1,27 +1,29 @@
 <aside class="sidebar">
     
     <div class="filter">
-        <label for="categoria">Categoría</label>
-        <select id="categoria">
-            <option value="todos">Todos</option>
-            <option value="electrodomesticos">Electrodomésticos</option>
-            <option value="electronica">Electrónica</option>
-            <option value="ropa">Ropa</option>
-            <option value="hogar">Hogar</option>
+        <label for="category">Category</label>
+        <select id="category">
+            <option value="">All</option>
+            <option value="Smartphones">Smartphones</option>
+            <option value="PC">PC</option>
+            <option value="Gaming">Gaming</option>
+            <option value="Music">Music</option>
+            <option value="TV">TV</option>
+            <option value="Accesories">Accesories</option>
         </select>
     </div>
     
     <div class="filter">
-        <label for="precio-min">Precio Mínimo</label>
+        <label for="min-price">Min Price</label>
         <input type="number" id="precio-min" placeholder="Min. $0" min="0" step="10">
     </div>
     
     <div class="filter">
-        <label for="precio-max">Precio Máximo</label>
-        <input type="number" id="precio-max" placeholder="Max. $1000" min="0" step="10">
+        <label for="max-price">Max Price</label>
+        <input type="number" id="max-price" placeholder="Max. $1000" min="0" step="10">
     </div>
     
-    <div class="filter">
+    <div class="filter" *ngIf="filters.category == 'Smartphones' || 'PC' ">
           <label for="ram">RAM</label>
           <select id="ram">
             <option value="4gb">4GB</option>
@@ -31,36 +33,15 @@
           </select>
     </div>
     
-    <div class="filter">
+    <div class="filter" *ngIf="filters.category == 'Smartphones' ">
           <label for="ram">Color</label>
           <select id="ram">
             <option value="red">Red</option>
-            <option value="Blue">Blue</option>
+            <option value="blue">Blue</option>
             <option value="white">White</option>
             <option value="black">Black</option>
           </select>
     </div>
-    
-   
-       <div class="filter">
-         <label for="ram">Storage</label>
-         <select id="ram">
-           <option value="32">32GB</option>
-           <option value="8gb">64</option>
-           <option value="16gb">128</option>
-           <option value="32gb">248</option>
-         </select>
-       </div>
-      
-         <div class="filter">
-           <label for="ram"></label>
-           <select id="ram">
-             <option value="4gb">4GB</option>
-             <option value="8gb">8GB</option>
-             <option value="16gb">16GB</option>
-             <option value="32gb">32GB</option>
-           </select>
-         </div>
 
     <button class="apply-btn">Apply</button>
 </aside>
