--- a/client/src/app/layout/search-page-aside/search-page-aside.component.html
+++ b/client/src/app/layout/search-page-aside/search-page-aside.component.html
@@ -44,5 +44,5 @@
           </select>
     </div>
 
-    <button class="apply-btn">Apply</button>
+    <button (click)="applyFilters()" class="apply-btn">Apply</button>
 </aside>
