--- a/client/src/app/layout/search-page-aside/search-page-aside.component.html
+++ b/client/src/app/layout/search-page-aside/search-page-aside.component.html
@@ -1,48 +1,46 @@
 <aside class="sidebar">
-    
-    <div class="filter">
-        <label for="category">Category</label>
-        <select id="category" [(ngModel)]="filters.category">
-          <option value="">All</option>
-          <option value="Smartphones">Smartphones</option>
-          <option value="PC">PC</option>
-          <option value="Gaming">Gaming</option>
-          <option value="Music">Music</option>
-          <option value="TV">TV</option>
-          <option value="Accesories">Accesories</option>
-        </select>
-        
-    </div>
-    
-    <div class="filter">
-        <label for="min-price">Min Price</label>
-        <input type="number" id="precio-min" placeholder="Min. $0" min="0" step="10">
-    </div>
-    
-    <div class="filter">
-        <label for="max-price">Max Price</label>
-        <input type="number" id="max-price" placeholder="Max. $1000" min="0" step="10">
-    </div>
-    
-    <div class="filter" *ngIf="filters.category == 'Smartphones' || filters.category == 'PC' ">
-          <label for="ram">RAM</label>
-          <select id="ram">
-            <option value="4gb">4GB</option>
-            <option value="8gb">8GB</option>
-            <option value="16gb">16GB</option>
-            <option value="32gb">32GB</option>
-          </select>
-    </div>
-    
-    <div class="filter" *ngIf="filters.category == 'Smartphones' ">
-          <label for="ram">Color</label>
-          <select id="ram">
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="white">White</option>
-            <option value="black">Black</option>
-          </select>
-    </div>
+  <div class="filter">
+    <label for="category">Category</label>
+    <select id="category" [(ngModel)]="filters.category">
+      <option value="">All</option>
+      <option value="Smartphones">Smartphones</option>
+      <option value="PC">PC</option>
+      <option value="Gaming">Gaming</option>
+      <option value="Music">Music</option>
+      <option value="TV">TV</option>
+      <option value="Accesories">Accesories</option>
+    </select>
+  </div>
 
-    <button (click)="applyFilters()" class="apply-btn">Apply</button>
+  <div class="filter">
+    <label for="min-price">Min Price</label>
+    <input type="number" id="min-price" [(ngModel)]="filters.minPrice" placeholder="Min. $0" min="0" step="10">
+  </div>
+
+  <div class="filter">
+    <label for="max-price">Max Price</label>
+    <input type="number" id="max-price" [(ngModel)]="filters.maxPrice" placeholder="Max. $1000" min="0" step="10">
+  </div>
+
+  <div class="filter" *ngIf="filters.category == 'Smartphones' || filters.category == 'PC'">
+    <label for="ram">RAM</label>
+    <select id="ram" [(ngModel)]="filters.ram">
+      <option value="4gb">4GB</option>
+      <option value="8gb">8GB</option>
+      <option value="16gb">16GB</option>
+      <option value="32gb">32GB</option>
+    </select>
+  </div>
+
+  <div class="filter" *ngIf="filters.category == 'Smartphones'">
+    <label for="color">Color</label>
+    <select id="color" [(ngModel)]="filters.color">
+      <option value="red">Red</option>
+      <option value="blue">Blue</option>
+      <option value="white">White</option>
+      <option value="black">Black</option>
+    </select>
+  </div>
+
+  <button (click)="applyFilters()" class="apply-btn">Apply</button>
 </aside>
