--- a/client/src/app/layout/product-card/product-card.component.css
+++ b/client/src/app/layout/product-card/product-card.component.css
@@ -1,37 +1,25 @@
 .product-card {
-  position: relative;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 12px;
-  overflow: hidden;
-  width: 250px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-
+  padding: 15px;
+  width: 200px;
+  height: auto;  
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
 }
 
-.product-card:hover {
-  transform: translateY(-5px);
-}
-
-.product-img {
+.product-image img {
   width: 100%;
-  height: 200px;
+  height: 150px; 
   object-fit: cover;
- 
 }
 
+.p-data-title {
+  text-align: center;
+  font-size: 17px;
+  font-weight: bold;
+}
 
-.p-wishlist {
-position: absolute;
-top: 15px;
-right: 15px;
-background: white;
-width: 40px;
-height: 40px;
-display: flex;
-align-items: center;
-justify-content: center;
-border-radius: 50%;
-
+.p-data-price {
+  color: green;
 }
