--- a/client/src/app/layout/product-card/product-card.component.html
+++ b/client/src/app/layout/product-card/product-card.component.html
@@ -1,11 +1,13 @@
 <a [routerLink]="['/product', product.id]">
   <div class="product">
-    <div class="product-card">
-      <img [src]="product.pictures[0]" alt="Product" class="product-img">
-      <div class="product-info">
-        <h3 class="product-title">{{ product.title }}</h3>
-        <span class="product-price">${{ product.price }}</span>
-      </div>
-    </div>
+     <div class="product-card">
+  <div class="product-image">
+    <img [src]="product.pictures[0]" alt="Product">
+  </div>
+  <div class="product-data">
+    <p class="p-data-title">{{ product.title }}</p>
+    <p class="p-data-price">${{ product.price }}</p>
+  </div>
+</div>
   </div>
 </a>
