--- a/client/src/app/admin/admin-users/admin-users.component.css
+++ b/client/src/app/admin/admin-users/admin-users.component.css
@@ -23,9 +23,9 @@ main .users-table {
     background: #DBDCE5;
   }
   
-  main .users-table td.actions .actions-ban {
+  /* main .users-table td.actions .actions-ban {
     background: #B41D1D;
     color: white;
-  }
+  } */
   
   
