--- a/client/src/app/admin/admin-users/admin-users.component.html
+++ b/client/src/app/admin/admin-users/admin-users.component.html
@@ -19,7 +19,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
                 <td>Spent</td>
-                <td>{{ user.joinedDate }}</td>
+                <td>{{ user.joinedAt }}</td>
                 <td>Last Login</td>
                 <td>Ban</td>
                 <td class="actions">
