--- a/client/src/app/admin/admin-users/admin-users.component.html
+++ b/client/src/app/admin/admin-users/admin-users.component.html
@@ -20,7 +20,7 @@
                 <td>{{ user.email }}</td>
                 <td>Spent</td>
                 <td>{{ user.joinedAt }}</td>
-                <td>{{ user.lastLogin ?? 'New User' }}</td>
+                <td>{{ user.lastLogin }}</td>
                 <td>Ban</td>
                 <td class="actions">
                   <button class="actions-profile">
