finishing admin users page

--- a/client/src/app/admin/admin-users/admin-users.component.html
+++ b/client/src/app/admin/admin-users/admin-users.component.html
@@ -28,7 +28,9 @@
                   </button>
                   
                   <app-ban-user 
-                  [userId]="user.id ?? null">
+                  [userId]="user.id ?? null"
+                  [isBanned]="user.isBanned ?? false"
+                  >
                   </app-ban-user>
                 </td>
               </tr>
